--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/sithu/cmpe273-lab2/issues"
-  }
+  },
+  "homepage": "https://github.com/sithu/cmpe273-lab2"
 }
